--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,15 @@
 
     <groupId>cn.structured</groupId>
     <artifactId>structure-admin</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <name>structure-admin</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
-        <structure.version>1.0.1.RELEASE</structure.version>
-        <spring.boot.version>2.1.4.RELEASE</spring.boot.version>
+        <!--<structure.version>1.1.0.RELEASE</structure.version>-->
+        <structure.version>1.1.0.SNAPSHOT</structure.version>
+        <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
@@ -23,7 +24,6 @@
         <dependency>
             <groupId>cn.structured</groupId>
             <artifactId>structure-mybatis-plus-starter</artifactId>
-            <version>${structure.version}</version>
         </dependency>
         <dependency>
             <groupId>cn.structured</groupId>
@@ -32,32 +32,25 @@
         <dependency>
             <groupId>cn.structured</groupId>
             <artifactId>structure-jwt-security-starter</artifactId>
-            <version>1.0.3.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.gavaghan</groupId>
-            <artifactId>geodesy</artifactId>
-            <version>1.1.3</version>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.gavaghan</groupId>
+            <artifactId>geodesy</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
-            <version>1.9.6</version>
         </dependency>
-        <dependency>
-            <groupId>org.modelmapper</groupId>
-            <artifactId>modelmapper</artifactId>
-            <version>2.1.1</version>
-        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
@@ -65,7 +58,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-parent</artifactId>
-                <version>${spring.boot.version}</version>
+                <version>${spring-boot.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -89,7 +82,6 @@
             <plugin>
                 <groupId>cn.structrurd</groupId>
                 <artifactId>structure-mybatis-plus-generate</artifactId>
-                <version>1.0.1.RELEASE</version>
                 <configuration>
                     <configurationFile>${basedir}/src/main/resources/generator-config.yaml</configurationFile>
                 </configuration>
