--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <!--<structure.version>1.1.0.RELEASE</structure.version>-->
-        <structure.version>1.1.0.SNAPSHOT</structure.version>
+        <structure.version>1.1.0.RELEASE</structure.version>
+        <!--<structure.version>1.1.0.SNAPSHOT</structure.version>-->
         <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
     </properties>
 
