升级v1.1.1 并发布版本

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>cn.structrurd</groupId>
+                <groupId>cn.structured</groupId>
                 <artifactId>structure-mybatis-plus-generate</artifactId>
                 <configuration>
                     <configurationFile>${basedir}/src/main/resources/generator-config.yaml</configurationFile>
