--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,13 @@
     <artifactId>structure-admin</artifactId>
     <version>1.0.1</version>
     <name>structure-admin</name>
-    <description>Demo project for Spring Boot</description>
+    <description>脚手架集成管理平台</description>
 
     <properties>
-        <java.version>1.8</java.version>
+        <spring-boot.version>2.1.4.RELEASE</spring-boot.version>
         <structure.version>1.1.2.RELEASE</structure.version>
-        <!--<structure.version>1.1.0.SNAPSHOT</structure.version>-->
-        <spring-boot.version>2.1.2.RELEASE</spring-boot.version>
+        <guava.version>20.0</guava.version>
+        <mysql.version>8.0.13</mysql.version>
     </properties>
 
     <dependencies>
@@ -21,36 +21,32 @@
             <groupId>cn.structured</groupId>
             <artifactId>structure-restful-web-starter</artifactId>
         </dependency>
+
         <dependency>
             <groupId>cn.structured</groupId>
             <artifactId>structure-mybatis-plus-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.structured</groupId>
-            <artifactId>structure-log-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.structured</groupId>
             <artifactId>structure-jwt-security-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>cn.structured</groupId>
+            <artifactId>structure-log-starter</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.gavaghan</groupId>
-            <artifactId>geodesy</artifactId>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>swagger-bootstrap-ui</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
@@ -72,12 +68,13 @@
         </dependencies>
     </dependencyManagement>
 
-
     <build>
+        <finalName>structure-admin-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
             </plugin>
             <plugin>
                 <groupId>cn.structured</groupId>
@@ -89,6 +86,7 @@
                     <dependency>
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
+                        <version>${mysql.version}</version>
                     </dependency>
                 </dependencies>
             </plugin>
