--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
             </dependency>
             <dependency>
                 <groupId>cn.structured</groupId>
-                <artifactId>structure-basic-core</artifactId>
+                <artifactId>structure-basic-api</artifactId>
                 <version>${structure-basic.version}</version>
             </dependency>
             <dependency>
